# ZAMP

./: Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  core  interp  libtool  plik.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
config/: addresses_validator.txt  (+2 more)
inc/: AccessControl.hh  Configuration.hh  ConnectionManager.hh  Cuboid.hh  DronPose.hh  Interp4Command.hh  Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.cpp  Interp4Rotate.hh  LibraryInterface.hh  Makefile  Makefile.am  Makefile.in  MobileObject.hh  ObiektMobilny.hh  Parser.hh  PluginManager.hh  Port.hh  Scene.hh  Simulation.hh  Vector2D.hh  Vector3D.hh  Visualization.hh  xmlinterp.hh
src-lib/: Interp4Move.la  Interp4Move_la-Interp4Move.lo  Interp4Pause.la  Interp4Pause_la-Interp4Pause.lo  Interp4Rotate.cpp  Interp4Rotate.la  Interp4Rotate_la-Interp4Rotate.lo  Interp4Set.cpp  Interp4Set.la  Interp4Set_la-Interp4Set.lo  Makefile  Makefile.am  Makefile.in  Makefile_set.am
src-lib/.deps/: Interp4Move_la-Interp4Move.Plo  Interp4Pause_la-Interp4Pause.Plo  Interp4Rotate_la-Interp4Rotate.Plo  Interp4Set_la-Interp4Set.Plo  libmove_la-Interp4Move.Plo  libpause_la-Interp4Pause.Plo  librotate_la-Interp4Rotate.Plo  libset_la-Interp4Set.Plo
src-lib/.libs/: Interp4Move.la  Interp4Move.lai  Interp4Move.so.1  Interp4Move.so.1.0.0  Interp4Pause.la  Interp4Pause.lai  Interp4Pause.so.1  Interp4Pause.so.1.0.0  Interp4Rotate.la  Interp4Rotate.lai  Interp4Rotate.so.1.0.0  Interp4Set.la  Interp4Set.lai  Interp4Set.so.1.0.0
(+644 files in other folders)
