noinst_HEADERS= AccessControl.hh \
                Configuration.hh \
                ConnectionManager.hh \
                Cuboid.hh \
                Interp4Command.hh \
                LibraryInterface.hh \
                MobileObject.hh \
                Parser.hh \
                PluginManager.hh \
                Port.hh \
                Scene.hh \
                Simulation.hh \
                Vector2D.hh \
                Vector3D.hh \
                xmlinterp.hh \
                Interp4Move.hh \
                Interp4Pause.hh \
                Interp4Rotate.hh \
                Interp4Set.hh