lib_LTLIBRARIES = Interp4Move.la Interp4Pause.la Interp4Rotate.la Interp4Set.la 
Interp4Move_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
Interp4Move_la_SOURCES = Interp4Move.cpp
Interp4Move_la_LDFLAGS = -module -version-info 1:0:0

Interp4Pause_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
Interp4Pause_la_SOURCES = Interp4Pause.cpp
Interp4Pause_la_LDFLAGS = -module -version-info 1:0:0

Interp4Rotate_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
Interp4Rotate_la_SOURCES = Interp4Rotate.cpp
Interp4Rotate_la_LDFLAGS = -module -version-info 1:0:0

Interp4Set_la_CXXFLAGS = -I../inc -I../../../inc -std=c++17
Interp4Set_la_SOURCES = Interp4Set.cpp
Interp4Set_la_LDFLAGS = -module -version-info 1:0:0